tests/ui-tests/tests/cases/enum-guess-validation.stderr
error: Could not find an enum named Desseqt in ../../../cynic/src/bin/simple.graphql. Did you mean `Dessert`?
  --> tests/cases/enum-guess-validation.rs:10:5
   |
10 |     graphql_type = "Desseqt"
   |     ^^^^^^^^^^^^

warning: variant `ICE_CREAM` should have an upper camel case name
  --> tests/cases/enum-guess-validation.rs:14:5
   |
14 |     ICE_CREAM,
   |     ^^^^^^^^^ help: convert the identifier to upper camel case: `IceCream`
   |
   = note: `#[warn(non_camel_case_types)]` on by default
